[package]
name = "fog-rawfile"
version = "0.1.0"
edition = "2021"
authors = ["Scott Teal"]
readme = "README.md"
repository = "https://github.com/Cognoscan/fog-rawfile"
homepage = "https://github.com/Cognoscan/fog-rawfile"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fog-pack = "0.2"
gearhash = "0.1"
lazy_static = "1.4.0"
serde = "1"
serde_bytes = "0.11"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
